# cs503-lisp-interpreter

./: .gitignore  CMakeLists.txt  README.md  UnitTests  setup.sh  todo.txt
examples/: fibonacci.lsp
run/: CMakeLists.txt  main.cpp
source_dump/: ArithmeticOperators.hpp  BooleanOperators.hpp  CommandLineInterpreter.cpp  CommandLineInterpreter.hpp  Conditional.cpp  Conditional.hpp  ConditionalOperators.hpp  Debug.cpp  Debug.hpp  ErrorHandle.cpp  FileReadInterpreter.cpp  FileReadInterpreter.hpp  FunctionTypes.hpp  Functions.cpp  Functions.hpp  List.cpp  List.hpp  ListOperators.hpp  Null.cpp  Null.hpp  Number.cpp  Number.hpp  OperatorOperands.hpp  ParenthesisUtils.hpp  Parser.cpp  Parser.hpp  PrintOperator.hpp  README.md  TypeOperators.hpp  main.cpp
src/: CMakeLists.txt
src/BasicTypes/: CMakeLists.txt  Conditional.cpp  Conditional.hpp  IBasicType.hpp  Lambda.cpp  Lambda.hpp  List.cpp  List.hpp  Null.cpp  Null.hpp  Number.cpp  Number.hpp
src/Error/: ErrorHandle.hpp
src/Functions/: ArithmeticOperators.hpp  BooleanOperators.hpp  CMakeLists.txt  ConditionalOperators.hpp  FunctionTypes.hpp  Functions.cpp  Functions.hpp  ListOperators.hpp  PrintOperator.hpp  TypeOperators.hpp
src/Interpreters/: CMakeLists.txt  CommandLineInterpreter.cpp  CommandLineInterpreter.hpp  FileReadInterpreter.cpp  FileReadInterpreter.hpp
src/Output/: CMakeLists.txt  Debug.cpp  Debug.hpp  ErrorHandle.cpp  ErrorHandle.hpp
src/Parsers/: CMakeLists.txt  LispParser.cpp  LispParser.hpp  OperatorOperands.hpp  ParenthesisUtils.hpp  Parser.cpp  Parser.hpp  (+1 more)
tests/: CMakeLists.txt  UnitTests.cpp
(+26 files in other folders)
